refactor: bulk review of daily changes