@@ -6,6 +6,8 @@
 
 **DO NOT FORGET TO CHECK, IF THE ISSUE YOU WANT TO WORK ON, ISN'T ALREADY ASSIGNED TO SOMEONE ELSE!**
 
+**MAKE SURE YOUR CODE COMPILES AND RUNS WITHOUT ERRORS BEFORE SUBMITTING!**
+
 ## Introduction
 
 You are welcome and encouraged to join your forces with us and put your Java skills and knowledge to a good use by helping us to build this project. **"Java demos"** are meant to be the place for both beginners in Java and more experienced programmers alike. With new features are being added (and sometimes even removed) every half a year, it is not easy to keep up. There are overview articles accompanying each JDK release, but having a comprehensive overview all at one place? Haven't found such project yet.
@@ -63,17 +65,21 @@ We can always discuss under each individual issue/PR, how to turn your invaluabl
 
 1. Go into [Issues](https://github.com/AloisSeckar/demos-java/issues) and pick up an issue you want to work on. **Check if it is not assigned to someone else yet**. It is also advised to ask for an assignment first to avoid possible clash of two contributors over same issue. If that ever happens, I will try to guide you to blend your variant with the previously accepted, but the result can't be guaranted. If no suitable issue is opened, please feel free to create a new one.
 2. Fork the repository to your own GitHub account, create a new branch and work on your changes there. Check [GitHub docs](https://docs.github.com/en/get-started/exploring-projects-on-github/contributing-to-a-project) to understand the general process better, if you not fully familiar with it yet. Don't hessitate to ask me for help, if needed.
-3. Once you are done, create a Pull Request (PR) from your branch to the `main` branch of this repository. Again, check [GitHub docs](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-pull-requests) for more info about PRs. I'd advise you to focus on one JEP at the time, have a new branch and new PR for each. Also, don't forget to sync your fork with the original repository to avoid conflicts. Conflicts are likely, because more people may access the same files (e.g. helpers and JSON resources) at the same time.
-4. To get your submission accepted, I'd like to ask you to follow those few key points:
+3. **Always make sure your code compiles and runs without errors.** 
+   - Command `mvn clean install` must execute successfully.
+   - Command `java --enable-preview --add-modules=jdk.incubator.vector -jar target\JavaDemos-25.0.jar` must run and finnish without errors. You may miss some important context and information without reading the comments in the source code, but at least you will be sure your code is not breaking anything.
+4. Once you are done, create a Pull Request (PR) from your branch to the `main` branch of this repository. Again, check [GitHub docs](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-pull-requests) for more info about PRs. I'd advise you to focus on one JEP at the time, have a new branch and new PR for each. Also, don't forget to sync your fork with the original repository to avoid conflicts. Conflicts are likely, because more people may access the same files (e.g. helpers and JSON resources) at the same time.
+5. To get your submission accepted, I'd like to ask you to follow those few key points:
     - Make yourself familiar with the [Project structure](#project-structure) to understand how this project is meant to work.
     - If you are working on a new JEP, provide new implementation of `IDemo` interface for the JEP you are working on with sufficient content.
     - Place the new file accordingly into the project structure (correct JDK and JEP folder).
     - Follow the markdown style comments to describe the class.
     - Do not hessitate to use (standard) comments inside your code - remember the desired usecase is future users will check the code to figure out how the feature works.
-    - Do not forget to add required record to the respective JSON resource file (JEP name and brief, but meaningful description).
-    - Do not forget to add your new demo into the respective helper class for the JDK version, so it gets executed from `Main.java`.
+    - Do not forget to add required record to the respective JSON resource file (JEP name and brief, but meaningful description). **Keep the records ordered by JEP number ascending.**
+    - Do not forget to add your new demo into the respective helper class for the JDK version, so it gets executed from `Main.java`. Always add comment with JEP number for better clarity. **Keep the demos ordered by JEP number ascending.**
+    - Make sure you are not accidentally submitting some other files or changes that are not related to PR topic.
     - Check an [example of well-structured PR](https://github.com/AloisSeckar/demos-java/pull/52/files) to ensure your sumbission fits the expected standard.
-5. For any questions, feel free to ask in the opened issue, or contact me directly.
-6. Please, be patient. I will try to review your PR as soon as possible, but sometimes it is not possible to do it immediately. I will try to provide you with feedback and/or merge it within 24 hours.
+6. For any questions, feel free to ask in the opened issue, or contact me directly.
+7. Please, be patient. I will try to review your PR as soon as possible, but sometimes it is not possible to do it immediately. I will try to provide you with feedback and/or merge it within 24 hours.
 
 Thank you for your interest in this project and your willingness to help! I am looking forward to co-operating with you :heart_eyes:
